# actix-web-assembly-auth-app

./: Cargo.toml  README.md
auth_api_w_actix/: .env  Cargo.toml
auth_api_w_actix/migrations/2023-11-09-014639_create_usr_table/: up.sql
auth_api_w_actix/src/: main.rs
auth_api_w_actix/src/api/: controller.rs
auth_api_w_actix/src/models/: user.rs
auth_api_w_actix/src/repository/: database.rs  schema.rs
auth_api_w_actix/src/utils/: errors.rs  mod.rs  password.rs  secure.rs
auth_w_yew/: Cargo.toml  Trunk.toml  index.html
auth_w_yew/src/: lib.rs  main.rs  register.rs  store.rs
common/: Cargo.toml
common/src/models/: credentials.rs  user.rs
