[package]
name = "auth_api_w_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }
diesel = { version = "2.0.3", features = ["mysql", "r2d2", "chrono", "uuid"] }
argon2 = "0.5.2"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["redis-actor-session"] }
jsonwebtoken = "9.1.0"
common = { path="../common" }
actix-cors = "0.6.4"
