[package]
name = "auth_w_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
gloo = "0.10.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65" }
yew = "^0.19"
common = { path="../common" }
stylist = { version = "0.10.0", features = ["yew"]}
yew-router = "0.16.0"
yewdux-functional = "0.1.0"
yewdux = "0.7.0"
reqwasm = "0.5.0"
bounce = "0.2.0"
wasm-logger = "0.2.0"
log = { version="0.4", features=["std"] }
